# learning

./: .gitignore  README.md
auto-quote/: Dockerfile  Dockerfile.prod  docker-compose.yml  package.json  webpack.config.js
auto-quote/client/: index.html
auto-quote/client/components/: HeaderBar.js
auto-quote/nginx/: default.conf
auto-quote/server/: index.js
compiler/9cc/: 9cc.c  9cc.h  codegen.c  parse.c  test.sh
compiler/javaInterpreter/Interpreter/: test1.bas
compiler/miniCalculator/src/: Lexer.java  todo.md
compiler/miniCalculator/test/: LexerTest.java
cpp/atcoder/: Makefile  program  tmp.cpp
cpp/ezoe/: Makefile  hello  hello.cpp  main.cpp  program
cpp/modern_c++/: a.out  mylib.cpp  mylib.h  q001.cpp  q002.cpp  q006.cpp  q010.cpp  q011.cpp  q012.cpp  q013.cpp  q014.cpp  q015.cpp  q015_mine.cpp  q016.cpp  q016_mine.cpp  q017.cpp  q017_mine.cpp  q018.cpp  q019.cpp  q019_mine.cpp  q020.cpp  q021.cpp  q022.cpp  q023.cpp  q024.cpp  q024_mine.cpp  q025.cpp  q025_mine.cpp  q026.cpp  q026_mine.cpp  q027.cpp  q027_mine.cpp  q028.cpp  q029.cpp  q030.cpp  q030_mine.cpp  q031.cpp  q032.cpp  q033.cpp  q033_mine.cpp  (+57 more)
cpp/modern_c++/c/: test3
cpp/modern_c++/q043/: CMakeLists.txt  q043  q043.cpp
cpp/modern_c++/q044/: CMakeLists.txt  q044.cpp
cpp/modern_c++/q059/: CMakeLists.txt  q059.cpp
cpp/modern_c++/q060/: CMakeLists.txt  q060.cpp  q060_ex.cpp
cpp/modern_c++/q064/: CMakeLists.txt  q064.cpp
cpp/modern_c++/q065/: CMakeLists.txt  q065.cpp  q065_ex.cpp
cpp/modern_c++/q066/: CMakeLists.txt  q066.cpp
cpp/modern_c++/q070/: CMakeLists.txt  q070.cpp  q070_ex.cpp
cpp/modern_c++/q071/: CMakeLists.txt  q071.cpp  q071_ex.cpp
cpp/modern_c++/q077/: CMakeLists.txt  q077.cpp
cpp/modern_c++/q082/: CMakeLists.txt  q082.cpp
cpp/modern_c++/q083/: CMakeLists.txt  q083.cpp
cpp/modern_c++/q085/: CMakeLists.txt  q085.cpp  q085_ex.cpp
cpp/modern_c++/q088/: CMakeLists.txt  q088.cpp
cpp/modern_c++/q089/: CMakeLists.txt  q089.cpp
cpp/modern_c++/q090/: CMakeLists.txt  q090.cpp  q090_ex.cpp
cpp/modern_c++/q095/: CMakeLists.txt  q095.cpp
html/: generated.json  load.js  test.html
linux/: cat  cat.c  cat_better  count  count.c  test_file
linux/chap04/: hello
linux/chap05/: cat  cat2  cat2.c  cat_better.c
linux/chap06/: chap6-1  chap6-1.c  chap6-2  chap6-2.c  chap6-3  chap6-3.c  data6-1  data6-3
linux/chap07/: chap7-1  chap7-1.c  head  head.c  testdata  testdata2
linux/chap08/: grep.c
linux/chap10/: ls  mkdir  mkdir.c  stat  stat.c
linux/chap12/: spawn  spawn.c
linux/chap15/: a.out  daytime.c
linux/chap16/: httpd  httpd.c  httpd2  httpd2.c
llvm/kaleidoscope/: toy.cpp
md-prev/: package-lock.json  package.json
next/e-she/e-she/: .env.production  package-lock.json  package.json  tsconfig.json
php/: docker-compose.yml  form2.php  form3.php  index.php
php/docker/mysql/: init.sql
rails/asagao/: Gemfile
rails/asagao/config/: application.rb  credentials.yml.enc  routes.rb  storage.yml
rails/asagao/db/: schema.rb  seeds.rb
rails/chapter2/: 2-1-2.rb  2-1-3a.rb  2-1-3c.rb  2-1-3d.rb  2-1-4b.rb  2-2-1a.rb  2-2-1c.rb  2-2-2b.rb  2-2-3a.rb  2-2-3b.rb  2-2-3c.rb  2-2-3e.rb  2-3-2.rb  2-3-2c.rb  2-4-2.rb  2-4-3b.rb  books.txt  exercise1.rb  exercise2.rb  exercise3.rb
react_docker/: Dockerfile  README.md  docker-compose.yml  package.json  webpack.config.js
react_docker/client/: index.js
react_docker/nginx/: default.conf
rust/src/adder/: Cargo.toml
rust/src/average/: Cargo.toml
rust/src/branch/: Cargo.toml
rust/src/city-pop/: Cargo.toml
rust/src/communicator/: Cargo.toml
rust/src/concurrent/: Cargo.toml
rust/src/functions/: Cargo.toml
rust/src/guessing_game/: Cargo.toml
rust/src/hello/: Cargo.toml  hello.html
rust/src/hello_cargo/: Cargo.toml
rust/src/libtest/: Cargo.toml
rust/src/loops/: Cargo.toml
rust/src/minigrep/: Cargo.toml
rust/src/mutex_sample/: Cargo.toml
rust/src/practices/: Cargo.toml
rust/src/rectangles/: Cargo.toml
rust/src/sample/: Cargo.toml
rust/src/state/: Cargo.toml
rust/src/variables/: Cargo.toml
system-design/Compress/: CompressService.java
system-design/MiniHeap/: MiniHeap.java
system-design/MiniHeap_test/: MiniHeapTest.java
system-design/MyHashTable/: MyHashTable.java
system-design/Queue/: Queue.java
system-design/ReverseString/: ReversibleString.java
system-design/StringPermutation/: StringPermutationChecker.java
system-design/SubstringChecker/: SubstringChecker.java
system-design/UniqueString/: UniqueStringChecker.java
system-design/src/Compress/: CompressService.java
system-design/src/MiniHeap/: MiniHeap.java
system-design/src/MyHashTable/: MarkableElement.java  MyHashTable.java
system-design/src/Queue/: Queue.java
system-design/src/ReverseString/: ReversibleString.java
system-design/src/Stack/: Stack.java
system-design/src/StackConstantComplexity/: StackCC.java
system-design/src/StringPermutation/: StringPermutationChecker.java
system-design/src/SubstringChecker/: SubstringChecker.java
system-design/src/UniqueString/: UniqueStringChecker.java
system-design/src/addDigits/: DigitNumber.java
system-design/src/binaryTree/: BinaryTree.java
system-design/src/compress/: CompressService.java
system-design/src/deckOfCard/: BlackJack.java  Card.java  Deck.java  DeckCheeted.java  JokerCard.java  MTRandom.java  Mark.java  NormalCard.java  (+1 more)
system-design/test/: CompressServiceTest.java  MiniHeapTest.java  MyHashTableTest.java  QueueTest.java  ReversibleStringTest.java  StackTest.java  StringPermutationCheckerTest.java  SubstringCheckerTest.java  UniqueStringCheckerTest.java
tdd/: xunit.py
tdd/python/: xunit.py
todos/: README.md  package-lock.json  package.json
todos/src/: index.js
ts-react/: package-lock.json  package.json
typescript/auth_server_mock/: .gitconfig  Dockerfile  docker-compose.yml  package-lock.json  package.json
typescript/line_notify/: .bash_history  .gitconfig  docker-compose.yml  package-lock.json  package.json
typescript/modern_c++/: .bash_history  .gitconfig  .gitignore  package-lock.json  package.json
(+304 files in other folders)
